# ModernGraphicsSample

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Assets/Shaders/: BRDF.vert  Cubemap.vert  Culling.comp  Environment.vert  IrradianceConvolution.frag  Mesh.frag  Mesh.vert  Prefilter.frag
Source/: BRDF.frag  CMakeLists.txt  Common.hpp  DebugOutput.cpp  Environment.frag  EquirectangularToCubemap.frag  Graphics.cpp  Graphics.hpp  Hash.hpp  LoadModel.cpp  LoadTexture.cpp  Log.hpp  Main.cpp  Math.hpp  Mesh.frag  Mesh.vert  PostProcessing.frag  PostProcessing.vert  Renderer.cpp  Renderer.hpp
